[gd_scene load_steps=23 format=3 uid="uid://bbutpxxj74flx"]

[ext_resource type="Script" path="res://scrits/templates/enemy_template.gd" id="1_a1s6k"]
[ext_resource type="Script" path="res://scenes/enemies/enemy_body.gd" id="2_pq51u"]
[ext_resource type="Script" path="res://scrits/npcs/shared/vision_area.gd" id="3_noeos"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4bstp"]
radius = 0.31
height = 1.81

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x5s6n"]
cull_mode = 1
shading_mode = 0
albedo_color = Color(0, 0, 0, 1)
grow = true
grow_amount = 0.015

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e1ohs"]
next_pass = SubResource("StandardMaterial3D_x5s6n")
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.427451, 0.0666667, 0.839216, 1)
metallic_specular = 0.0
roughness = 0.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_y6plr"]
material = SubResource("StandardMaterial3D_e1ohs")
radius = 0.3
height = 1.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_38dff"]
cull_mode = 1
shading_mode = 0
albedo_color = Color(0, 0, 0, 1)
grow = true
grow_amount = 0.015

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nanu5"]
next_pass = SubResource("StandardMaterial3D_38dff")
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(0.784314, 0.0823529, 0.0627451, 1)
metallic_specular = 0.0
roughness = 0.0

[sub_resource type="SphereMesh" id="SphereMesh_lc125"]
material = SubResource("StandardMaterial3D_nanu5")

[sub_resource type="Animation" id="Animation_57nki"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Eyes:mesh:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_gav56"]
resource_name = "blink"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Eyes:mesh:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.4, 1.5, 1.6, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [1.0, 1.0, 0.1, 1.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_som66"]
_data = {
"RESET": SubResource("Animation_57nki"),
"blink": SubResource("Animation_gav56")
}

[sub_resource type="Animation" id="Animation_3wt7l"]
resource_name = "tracking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:target_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 2, -15.5), Vector3(0, -2, -15.5), Vector3(0, 2, -15.5)]
}

[sub_resource type="Animation" id="Animation_fe2ju"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:target_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 2, -15.5)]
}

[sub_resource type="Animation" id="Animation_js0l3"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:target_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, -15.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7dikg"]
_data = {
"RESET": SubResource("Animation_fe2ju"),
"idle": SubResource("Animation_js0l3"),
"tracking": SubResource("Animation_3wt7l")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_dshw0"]
radius = 16.5

[sub_resource type="Animation" id="Animation_jwgxa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyTemplate/Body:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_nrebi"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyTemplate/Body:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_sdh7t"]
resource_name = "observing"
length = 7.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyTemplate/Body:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 4, 5, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.309, 0), Vector3(0, 1.309, 0), Vector3(0, -1.309, 0), Vector3(0, -1.309, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y02tl"]
_data = {
"RESET": SubResource("Animation_jwgxa"),
"idle": SubResource("Animation_nrebi"),
"observing": SubResource("Animation_sdh7t")
}

[node name="EnemyTemplate" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_a1s6k")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.901874, 0)
shape = SubResource("CapsuleShape3D_4bstp")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 2.5
avoidance_enabled = true
radius = 2.0

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("CapsuleMesh_y6plr")
script = ExtResource("2_pq51u")

[node name="Eyes" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0.12, 0.479, -0.225)
mesh = SubResource("SphereMesh_lc125")

[node name="Eyes2" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -0.12, 0.479, -0.225)
mesh = SubResource("SphereMesh_lc125")

[node name="InvoluntarieMoves" type="AnimationPlayer" parent="Body"]
autoplay = "blink"
libraries = {
"": SubResource("AnimationLibrary_som66")
}

[node name="VisionArea" type="Area3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9, 0)
collision_layer = 4
monitorable = false
script = ExtResource("3_noeos")

[node name="ReactionTimer" type="Timer" parent="Body/VisionArea"]
wait_time = 2.0
one_shot = true

[node name="PerifericalVision" type="CollisionPolygon3D" parent="Body/VisionArea"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.2, 0)
polygon = PackedVector2Array(-4, 16, 4, 16, 0, 0)

[node name="Focus" type="RayCast3D" parent="Body/VisionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.983723, -0.283416)
target_position = Vector3(0, 2, -15.5)
collision_mask = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body/VisionArea/Focus"]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_7dikg")
}

[node name="PerifericalVisionRay" type="RayCast3D" parent="Body/VisionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.983723, -0.283416)
target_position = Vector3(0, 0, -16)
collision_mask = 7

[node name="PursuitArea" type="Area3D" parent="Body"]
collision_layer = 4
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Body/PursuitArea"]
shape = SubResource("CylinderShape3D_dshw0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_y02tl")
}

[node name="FaceDirection" type="Marker3D" parent="."]

[node name="ForgetAboutIt" type="Timer" parent="."]
wait_time = 10.0

[node name="AttackRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4068, -0.263425)
target_position = Vector3(0, 0, 0)

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="body_entered" from="Body/VisionArea" to="Body/VisionArea" method="_on_body_entered"]
[connection signal="body_exited" from="Body/VisionArea" to="Body/VisionArea" method="_on_body_exited"]
[connection signal="have_a_point_of_interest" from="Body/VisionArea" to="." method="_on_vision_area_have_a_point_of_interest"]
[connection signal="have_a_target" from="Body/VisionArea" to="." method="_on_vision_area_have_a_target"]
[connection signal="lost_sight_of" from="Body/VisionArea" to="." method="_on_vision_area_lost_sight_of"]
[connection signal="timeout" from="Body/VisionArea/ReactionTimer" to="Body/VisionArea" method="_on_reaction_timer_timeout"]
[connection signal="body_exited" from="Body/PursuitArea" to="." method="_on_pursuit_area_body_exited"]
[connection signal="timeout" from="ForgetAboutIt" to="." method="_on_forget_about_it_timeout"]
